# supportsmith-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json
alembic/: env.py  script.py.mako
alembic/versions/: 20260507_0001_init_pgvector.py
app/: __init__.py  main.py  prompts.py
app/agent/: __init__.py  compliance.py  graph.py  harness.py  nodes.py  policy.py  runner.py  state.py  tools.py  topics.py  verifier.py  wiring.py
app/api/: chat_flow.py  dependencies.py  langsmith_traces.py  security.py
app/core/: config.py
app/db/: __init__.py  migrate.py  models.py  postgres.py  session.py
app/evals/: judge.py  runner.py  scoring.py
data/: knowledge-base.json
evals/: cases.yaml
prompts/: general_knowledge.yaml  planner.yaml  synthesizer.yaml  verifier.yaml
scripts/: db_seed.py  ingest_website.py
tests/: conftest.py  test_admin_ingestion_routes.py  test_agent_graph.py  test_agent_live.py  test_agent_tools.py  test_agent_wiring.py  test_api_security.py  test_chat_persistence.py  test_compliance_and_verifier.py  test_config.py  test_conversations.py  test_database.py  test_eval_runner.py  test_fake_clients.py  test_health.py  test_ingestion_jobs.py  test_openai_adapter.py  test_retrieval_chunker.py  test_retrieval_embeddings.py  test_retrieval_normalization.py  test_retrieval_repository.py  test_retrieval_take_home_faq.py  test_url_utils.py  test_web_ui.py  test_website_chunker.py  test_website_classifier.py  test_website_ingestion_live.py  test_website_source_config.py
(+50 files in other folders)
